working from docker container remotely; some inconsistency with selecting like button, need to debug

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,8 +16,17 @@ RUN apt-get update && \
     apt-get install -y libgl1-mesa-glx && \
     rm -rf /var/lib/apt/lists/*
 
+# Install ADB into container
+RUN apt-get update && apt-get install -y \
+    adb \
+    # plus any other dependencies
+    && rm -rf /var/lib/apt/lists/*
+
+# Make work directoy
 WORKDIR /app
 COPY app/requirements.txt requirements.txt
+
+COPY .env .env
 
 # Install compatible numpy and other dependencies from requirements.txt
 RUN pip install --no-cache-dir numpy==1.21.6
@@ -29,9 +38,10 @@ COPY app/ /app/
 RUN python -m spacy download en_core_web_sm
 
 # Start ADB server
-RUN adb kill-server
-RUN adb start-server
+# RUN adb kill-server
+# RUN adb start-server
 
 EXPOSE 8000
 
-CMD ["python", "main.py"]
+# CMD ["python", "main.py"]
+CMD ["bash", "-c", "adb start-server && python main.py"]
