--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pytesseract==0.3.10
 python-dotenv==1.0.0
-openai==1.12.0
+anthropic==0.18.1
 Pillow==10.2.0
 numpy==1.26.4
 opencv-python==4.9.0.80 
