--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ python-dotenv==1.0.0
 anthropic==0.18.1
 Pillow==10.2.0
 numpy==1.26.4
-opencv-python==4.9.0.80 
+opencv-python==4.9.0.80
+pytz==2023.3 
